# FreiaThiwi

./: CHANGELOG.md  CMakeLists.txt  README.md
include/: AccountDatabase.h  encrypt.h  server.h
src/: AccountDatabase.cpp  encrypt.cpp  main.cpp  server.cpp
